Avoid canonicalising file paths
Canonicalisation can result in broken URLs/paths as some paths were
not canonicalised. E.g. on OSX /tmp/ canonicalises to /private/tmp.

Path is used instead of File, as it provides normalise() to resolve
relative dot segments without canonicalising.